syntax = "proto3";

package transactor;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum SBACOpcode {
  ACCEPT_TRANSACTION = 0;
  COMMIT_TRANSACTION = 1;
}

enum SBACDecision {
  ACCEPT = 0;
  REJECT = 1;
}

message SBACMessage {
  SBACOpcode op = 1;
  SBACDecision decision = 2;
  bytes transactionID = 3 [(gogoproto.customname) = "TransactionID"];
}
